Added editing functions such as create, edit and delete.

--- a/.gitignore
+++ b/.gitignore
@@ -363,22 +363,22 @@ MigrationBackup/
 FodyWeavers.xsd
 
 #SEBookStoreAngularStart
-SEBookStoreAngular.WebApi/Controllers/ContextAccessorGeneration.cs
-SEBookStoreAngular.WebApi/Controllers/BooksController.cs
-SEBookStoreAngular.MVVMApp/Models/Book.cs
-SEBookStoreAngular.MVVMApp/Models/BookInheritance.cs
-SEBookStoreAngular.WebApi/Models/Book.cs
-SEBookStoreAngular.WebApi/Models/BookInheritance.cs
-SEBookStoreAngular.WebApi/Models/BookEdit.cs
-SEBookStoreAngular.Common/Contracts/IBook.cs
-SEBookStoreAngular.MVVMApp/ViewModels/BookViewModel.cs
-SEBookStoreAngular.MVVMApp/ViewModels/BooksViewModel.cs
-SEBookStoreAngular.Logic/Entities/BookGeneration.cs
-SEBookStoreAngular.Logic/DataContext/BookSet.cs
-SEBookStoreAngular.Logic/DataContext/ProjectDbContextGeneration.cs
-SEBookStoreAngular.Logic/Contracts/IContextGeneration.cs
-SEBookStoreAngular.Logic/Contracts/IBookSet.cs
-Diagrams/Entities/Book.puml
-SEBookStoreAngular.AngularApp/src/app/services/http/entities/book-service.ts
-SEBookStoreAngular.AngularApp/src/app/models/entities/i-book.ts
+/Diagrams/Entities/Book.puml
+/SEBookStoreAngular.WebApi/Models/BookInheritance.cs
+/SEBookStoreAngular.WebApi/Models/BookEdit.cs
+/SEBookStoreAngular.WebApi/Models/Book.cs
+/SEBookStoreAngular.MVVMApp/ViewModels/BooksViewModel.cs
+/SEBookStoreAngular.MVVMApp/Models/BookInheritance.cs
+/SEBookStoreAngular.MVVMApp/Models/Book.cs
+/SEBookStoreAngular.Logic/Entities/BookGeneration.cs
+/SEBookStoreAngular.Logic/DataContext/BookSet.cs
+/SEBookStoreAngular.WebApi/Controllers/ContextAccessorGeneration.cs
+/SEBookStoreAngular.WebApi/Controllers/BooksController.cs
+/SEBookStoreAngular.MVVMApp/ViewModels/BookViewModel.cs
+/SEBookStoreAngular.Logic/DataContext/ProjectDbContextGeneration.cs
+/SEBookStoreAngular.Logic/Contracts/IContextGeneration.cs
+/SEBookStoreAngular.Logic/Contracts/IBookSet.cs
+/SEBookStoreAngular.Common/Contracts/IBook.cs
+/SEBookStoreAngular.AngularApp/src/app/services/http/entities/book-service.ts
+/SEBookStoreAngular.AngularApp/src/app/models/entities/i-book.ts
 #SEBookStoreAngularEnd
